@@ -1,3 +1,7 @@
+2013-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* luatex.c (mk_shellcmdlist): Simplify (sync with texmfmp.c).
+
 2013-01-10  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* pdf/pdfgen.w (write_stream_length): Cast length for printing.
