@@ -1,3 +1,7 @@
+2013-01-18  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* texmfmp.c (mk_shellcmdlist): Simplify.
+
 2013-01-06  Khaled Hosny  <khaledhosny@eglug.org>
 
 	* texmfmp.c [XeTeX]: Support input pipes.
